# Albert-Extra-KDE-Settings

./: CMakeLists.txt  README.md  index.md  metadata.json  testBuild.py  updateCMakeLists.sh
.docker/: Dockerfile.fedora.latest  Dockerfile.ubuntu.1804  Dockerfile.ubuntu.2004
.github/workflows/: cmake.yml  fedora-latest.yml  ubuntu-1804.yml  ubuntu-2004.yml  ubuntu-latest.yml
src/: KCMService.cpp  KCMService.h  aliasadder.cpp  aliasadder.h  aliasadder.ui  configwidget.cpp  configwidget.h  configwidget.ui  extension.cpp  extension.h  moduleeditordialog.cpp  moduleeditordialog.h  moduleeditordialog.ui
